<resources>
    <string name="app_name">PhotoGame</string>
    <string name="end_point">http://photogame.wrostdevelopers.com/api/</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>

    <string name="image">image</string>
    <string name="enter_username">Enter username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="enter_email">Enter email</string>
    <string name="back">Back to login</string>
    <string name="missing_fields">Please check that input is correct</string>
    <string name="upload_pic">Upload Pic</string>
    <string name="play">Play</string>
    <string name="leadership">Leadership board</string>
    <string name="let_s_play_upload_your_pic">Let\'s play, Upload your pic</string>
    <string name="enter_caption">Enter caption</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_address">Enter address</string>
    <string name="tap_camera">Tap camera to capture picture</string>
    <string name="uploading">Uploading...</string>
    <string name="uploaded">Uploaded successfully</string>
    <string name="error_uploading">Error occurred while uploading</string>
    <string name="name">Name</string>
    <string name="views">Views</string>
    <string name="dislikes">Dislikes</string>
    <string name="likes">Likes</string>
</resources>
